container-fluid menu li .active dtdd issue grid row color

--- a/MATA.Presentation.Web/Views/Attachments/_IssueAttachments.cshtml
+++ b/MATA.Presentation.Web/Views/Attachments/_IssueAttachments.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MATA.Presentation.Web.Models.Attachments.AttachmentsIndexVM
 
 <h4>
-    Dosyalar (@Model.TotalCount)
+    @Html.Localize("Attachments") (@Model.TotalCount)
     @if (User.IsInRole(RoleTypes.Admin) || User.IsInRole(RoleTypes.Staff))
     {
         <a href="@Url.Action("_Create", "Attachments", new { entityName = "Issue", entityID = ViewBag.IssueID })" id="mt-link-attachments-create" class="pull-right">
