--- a/MATA.Presentation.Web/Views/Shared/_ProjectSelect.cshtml
+++ b/MATA.Presentation.Web/Views/Shared/_ProjectSelect.cshtml
@@ -17,7 +17,7 @@
             data_url = Url.Action("Search", "Projects"),
             data_text_field = "ProjectName",
             data_value_field = "ID",
-            data_value = Model.SelectValue
+            data_text = Model.SelectText
         })
 
     </div>
