--- a/MATA.Presentation.Web/Views/Issues/_Edit.cshtml
+++ b/MATA.Presentation.Web/Views/Issues/_Edit.cshtml
@@ -2,17 +2,21 @@
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <h4 class="modal-title">Yeni İş</h4>
+    <h4 class="modal-title">@Model.SeqNo</h4>
 </div>
 
-@using (Html.BeginForm("Create", "Issues", FormMethod.Post, new { id = "mt-form-issues-create", @class = "form-horizontal" }))
-{
+<div class="mt-div-issue-edit collapse in">
+
+    @using (Html.BeginForm("Edit", "Issues", FormMethod.Post, new { id = "mt-form-issues-edit", @class = "form-horizontal" }))
+    {
 
     <div class="modal-body">
 
         @Html.AntiForgeryToken()
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-sm-4" })
@@ -40,7 +44,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RequestDate, htmlAttributes: new { @class = "control-label col-sm-4" })
             <div class="col-sm-8">
-                @Html.EditorFor(model => model.RequestDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(m => m.RequestDate)
+                <p class="form-control-static">
+                    @Html.DisplayFor(model => model.RequestDate)
+                </p>
                 @Html.ValidationMessageFor(model => model.RequestDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -63,9 +70,34 @@
 
     </div>
 
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" aria-label="Close">Kapat</button>
-        <input type="submit" value="Kaydet" class="btn btn-primary" />
-    </div>
-}
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal" aria-label="Close">@Html.Localize("Close")</button>
+            <button type="button" class="btn btn-danger" data-toggle="collapse" data-target=".mt-div-issue-edit">@Html.Localize("Delete")</button>
+            <input type="submit" value="@Html.Localize("Save")" class="btn btn-primary" />
+        </div>
+    }
 
+</div>
+
+<div class="mt-div-issue-edit collapse">
+
+    @using (Html.BeginForm("Delete", "Issues", new { id = Model.ID }, FormMethod.Post, new { id = "mt-form-issues-delete", @class = "form-horizontal" }))
+    {
+
+        <div class="modal-body">
+
+            @Html.AntiForgeryToken()
+
+            <div class="alert alert-warning">
+                @Html.LocalizeFormat("AreYouSureToDelete", Model.SeqNo)
+            </div>
+
+        </div>
+
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-toggle="collapse" data-target=".mt-div-issue-edit">@Html.Localize("Cancel")</button>
+            <input type="submit" value="@Html.Localize("Delete")" class="btn btn-primary" />
+        </div>
+    }
+
+</div>
