--- a/MATA.Presentation.Web/Views/Shared/_CountrySelect.cshtml
+++ b/MATA.Presentation.Web/Views/Shared/_CountrySelect.cshtml
@@ -17,7 +17,7 @@
             data_url = Url.Action("Search", "Countries"),
             data_text_field = "CountryName",
             data_value_field = "ID",
-            data_value = Model.SelectValue
+            data_text = Model.SelectText
         })
 
     </div>
